--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "^5.0.1",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
